# literalizer-cli

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.rst  Dockerfile  MANIFEST.in  README.rst  VERSION  flake.nix  pyproject.toml  spelling_private_dict.txt
.github/workflows/: ci.yml  dependabot-merge.yml  lint.yml  release.yml
docs/source/: __init__.py  commands.rst  conf.py  contributing.rst  index.rst  install.rst
newsfragments/: +migrated-next-2.change.rst  +migrated-next-3.change.rst  +migrated-next-4.change.rst  +migrated-next-5.change.rst  +migrated-next.change.rst  241.change.rst
src/literalizer_cli/: __init__.py  __main__.py
tests/: __init__.py  test_literalizer_cli.py
tests/test_literalizer_cli/: test_help.txt
