[build-system]
build-backend = "setuptools.build_meta"
requires = [
    "setuptools",
    "setuptools-scm>=8.1.0",
]

[project]
name = "literalizer-cli"
description = "CLI for literalizer - convert data structures to native language literal syntax."
readme = { file = "README.rst", content-type = "text/x-rst" }
keywords = [
    "cli",
    "literal",
    "literalizer",
    "syntax",
]
license = "MIT"
authors = [
    { name = "Adam Dangoor", email = "adamdangoor@gmail.com" },
]
requires-python = ">=3.12"
classifiers = [
    "Development Status :: 3 - Alpha",
    "Operating System :: Microsoft :: Windows",
    "Operating System :: POSIX",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
]
dynamic = [
    "version",
]
dependencies = [
    "click>=8.3.0,<8.4.0",
    "literalizer==2026.3.26.1",
]
optional-dependencies.dev = [
    "actionlint-py==1.7.11.24",
    "check-manifest==0.51",
    "deptry==0.25.1",
    "furo==2025.12.19",
    "mypy[faster-cache]==1.19.1",
    "mypy-strict-kwargs==2026.1.12",
    "prek==0.3.8",
    "pyproject-fmt==2.20.0",
    "pyrefly==0.58.0",
    "pyright==1.1.408",
    "pytest==9.0.2",
    "pytest-cov==7.1.0",
    "pytest-regressions==2.10.0",
    "pyyaml==6.0.3",
    "ruff==0.15.8",
    "shellcheck-py==0.11.0.1",
    "shfmt-py==3.12.0.2",
    "sphinx>=8.1.3",
    "sphinx-click==6.2.0",
    "sphinx-copybutton==0.5.2",
    "sphinx-lint==1.0.2",
    "sphinx-pyproject==0.3.0",
    "sphinx-substitution-extensions==2026.1.12",
    "sphinxcontrib-spelling==8.0.2",
    "ty==0.0.25",
    "uv==0.11.1",
    "yamlfix==1.19.1",
    "zizmor==1.23.1",
]
optional-dependencies.release = [
    "check-wheel-contents==0.6.3",
    "homebrew-pypi-poet==0.10",
    # homebrew-pypi-poet uses pkg_resources, which was removed in
    # setuptools 82.
    "setuptools>=70,<83",
]
urls.Documentation = "https://adamtheturtle.github.io/literalizer-cli/"
urls.Source = "https://github.com/adamtheturtle/literalizer-cli"
scripts.literalize = "literalizer_cli:main"

[tool.setuptools]
zip-safe = false
package-data.literalizer_cli = [
    "py.typed",
]
packages.find.where = [
    "src",
]

[tool.distutils]
bdist_wheel.universal = true

[tool.setuptools_scm]
version_file = "src/literalizer_cli/_setuptools_scm_version.py"
version_scheme = "post-release"

[tool.ruff]
line-length = 79
exclude = [ "**/_setuptools_scm_version.py" ]
lint.select = [
    "ALL",
]
lint.ignore = [
    # We can manage our own complexity.
    "C901",
    # Ruff warns that this conflicts with the formatter.
    "COM812",
    # Allow our chosen docstring line-style - pydocstringformatter handles formatting
    # but doesn't enforce D205 (blank line after summary) or D212 (summary on first line).
    "D205",
    "D212",
    # Ruff warns that this conflicts with the formatter.
    "ISC001",
    # Ignore 'too-many-*' errors as they seem to get in the way more than
    # helping.
    "PLR0912",
    "PLR0913",
    "PLR0915",
]
lint.per-file-ignores."tests/*.py" = [
    # Allow asserts in tests.
    "S101",
]
# Do not automatically remove commented out code.
# We comment out code during development, and with VSCode auto-save, this code
# is sometimes annoyingly removed.
lint.unfixable = [
    "ERA001",
]
lint.pydocstyle.convention = "google"

[tool.check-manifest]
ignore = [
    ".prettierrc",
    ".pre-commit-config.yaml",
    ".vscode/**",
    "CHANGELOG.rst",
    "Dockerfile",
    "LICENSE",
    "Makefile",
    "VERSION",
    "admin",
    "admin/**",
    "bin",
    "bin/**",
    "ci",
    "ci/**",
    "conftest.py",
    "docs",
    "docs/**",
    "flake.lock",
    "flake.nix",
    "spelling_private_dict.txt",
    "src/*/_setuptools_scm_version.py",
    "tests",
    "tests/**",
    "uv.lock",
    "zizmor.yml",
]

[tool.deptry]
pep621_dev_dependency_groups = [
    "dev",
    "release",
]

[tool.pyproject-fmt]
indent = 4
keep_full_version = true
max_supported_python = "3.14"

[tool.mypy]
strict = true
files = [ "." ]
exclude = [ "build" ]
follow_untyped_imports = true
plugins = [
    "mypy_strict_kwargs",
]

[tool.pyrefly]
errors.non-exhaustive-match = "error"

[tool.pyright]
enableTypeIgnoreComments = false
reportUnnecessaryTypeIgnoreComment = true
typeCheckingMode = "strict"

[tool.ty]
# Disable support for `type: ignore` comments
analysis.respect-type-ignore-comments = false
# Error if ty emits any warning-level diagnostics.
terminal.error-on-warning = true

[tool.pytest]
xfail_strict = true
log_cli = true

[tool.coverage]
run.branch = true
run.omit = [
    "src/*/_setuptools_scm_version.py",
    "src/literalizer_cli/__main__.py",
]
report.exclude_also = [
    "@overload",
    "class .*\\bProtocol\\):",
    "if TYPE_CHECKING:",
]
report.show_missing = true

[tool.yamlfix]
section_whitelines = 1
whitelines = 1
