[build-system]
build-backend = "setuptools.build_meta"
requires = [
    "setuptools",
    "setuptools-scm>=8.1.0",
]

[project]
name = "literalizer-cli"
description = "CLI for literalizer - convert data structures to native language literal syntax."
readme = { file = "README.rst", content-type = "text/x-rst" }
keywords = [
    "cli",
    "literal",
    "literalizer",
    "syntax",
]
license = "MIT"
authors = [
    { name = "Adam Dangoor", email = "adamdangoor@gmail.com" },
]
requires-python = ">=3.12"
classifiers = [
    "Development Status :: 3 - Alpha",
    "Operating System :: Microsoft :: Windows",
    "Operating System :: POSIX",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
]
dynamic = [
    "version",
]
dependencies = [
    "click>=8.3.0,<8.5.0",
    "literalizer==2026.7.15",
]
optional-dependencies.dev = [
    "actionlint-py==1.7.12.24",
    "check-manifest==0.51",
    "deptry==0.25.1",
    "doc8==2.0.0",
    "furo==2025.12.19",
    "interrogate==1.7.0",
    "mypy[faster-cache]==2.3.0",
    "mypy-strict-kwargs==2026.5.20.1",
    "prek==0.4.9",
    "pydocstringformatter==1.0.0",
    "pylint[spelling]==4.0.6",
    "pylint-per-file-ignores==3.2.1",
    "pyproject-fmt==2.25.3",
    "pyrefly==1.1.1",
    "pyright==1.1.411",
    "pyroma==5.0.1",
    "pytest==9.1.1",
    "pytest-beartype-tests==2026.4.26",
    "pytest-cov==7.1.0",
    "pytest-regressions==2.11.0",
    "pytest-xdist==3.8.0",
    "pyyaml==6.0.3",
    "ruff==0.15.21",
    "shellcheck-py==0.11.0.1",
    "shfmt-py==4.0.0",
    "sphinx>=8.1.3",
    "sphinx-click==6.2.0",
    "sphinx-copybutton==0.5.2",
    "sphinx-lint==1.0.2",
    "sphinx-pyproject==0.3.0",
    "sphinx-substitution-extensions==2026.6.17",
    "sphinxcontrib-spelling==8.0.2",
    # ``sphinxcontrib-towncrier`` renders unreleased news fragments
    # into docs/source/unreleased.rst during Sphinx builds.
    "sphinxcontrib-towncrier==0.5.0a0",
    "strict-kwargs==2026.6.8.post1",
    "towncrier==25.8.0",
    "ty==0.0.60",
    "uv==0.11.29",
    "vulture==2.16",
    "yamlfix==1.19.1",
    "zizmor==1.27.0",
]
optional-dependencies.release = [
    "check-wheel-contents==0.6.3",
    "homebrew-pypi-poet==0.10",
    # homebrew-pypi-poet uses pkg_resources, which was removed in
    # setuptools 82.
    "setuptools>=70,<84",
    "towncrier==25.8.0",
]
urls.Documentation = "https://adamtheturtle.github.io/literalizer-cli/"
urls.Source = "https://github.com/adamtheturtle/literalizer-cli"
scripts.literalize = "literalizer_cli:main"

[tool.setuptools]
packages.find.where = [
    "src",
]
package-data.literalizer_cli = [
    "py.typed",
]
zip-safe = false

[tool.distutils]
bdist_wheel.universal = true

[tool.setuptools_scm]
version_file = "src/literalizer_cli/_setuptools_scm_version.py"
version_scheme = "post-release"

[tool.ruff]
line-length = 79
exclude = [ "**/_setuptools_scm_version.py" ]
lint.select = [
    "ALL",
]
lint.ignore = [
    # We can manage our own complexity.
    "C901",
    # Ruff warns that this conflicts with the formatter.
    "COM812",
    # Allow our chosen docstring line-style - pydocstringformatter handles formatting
    # but doesn't enforce D205 (blank line after summary) or D212 (summary on first line).
    "D205",
    "D212",
    # Ruff warns that this conflicts with the formatter.
    "ISC001",
    # Ignore 'too-many-*' errors as they seem to get in the way more than
    # helping.
    "PLR0912",
    "PLR0913",
    "PLR0915",
]
lint.per-file-ignores."tests/*.py" = [
    # Allow asserts in tests.
    "S101",
]
# Do not automatically remove commented out code.
# We comment out code during development, and with VSCode auto-save, this code
# is sometimes annoyingly removed.
lint.unfixable = [
    "ERA001",
]
lint.flake8-tidy-imports.banned-api."typing.cast".msg = "typing.cast is banned: use explicit type narrowing or a typed variable instead."
lint.pydocstyle.convention = "google"

[tool.pylint]
DEPRECATED_BUILTINS.bad-functions = [
    # Use Pylint until Ruff can ban bare builtin calls, or until custom rules
    # make this removable:
    # https://github.com/astral-sh/ruff/issues/10079
    # https://github.com/astral-sh/ruff/issues/970
    "filter",
    "getattr",
    "hasattr",
    "map",
    "setattr",
]
# Allow the body of an if to be on the same line as the test if there is no
# else.
FORMAT.single-line-if-stmt = false
# Ignore generated setuptools-scm version files.
MASTER.ignore-paths = [ "src/.*/_setuptools_scm_version.py" ]
# Use multiple processes to speed up Pylint.
MASTER.jobs = 0
# List of plugins (as comma separated values of python modules names) to load,
# usually to register additional checkers.
# See https://chezsoi.org/lucas/blog/pylint-strict-base-configuration.html.
# We do not use the plugins:
# - pylint.extensions.code_style
# - pylint.extensions.magic_value
# - pylint.extensions.while_used
# as they seemed to get in the way.
MASTER.load-plugins = [
    "pylint.extensions.bad_builtin",
    "pylint.extensions.comparison_placement",
    "pylint.extensions.consider_refactoring_into_while_condition",
    "pylint.extensions.docparams",
    "pylint.extensions.dunder",
    "pylint.extensions.eq_without_hash",
    "pylint.extensions.for_any_all",
    "pylint.extensions.mccabe",
    "pylint.extensions.no_self_use",
    "pylint.extensions.overlapping_exceptions",
    "pylint.extensions.private_import",
    "pylint.extensions.redefined_loop_name",
    "pylint.extensions.redefined_variable_type",
    "pylint.extensions.set_membership",
    "pylint.extensions.typing",
    "pylint_per_file_ignores",
]
# Pickle collected data for later comparisons.
MASTER.persistent = true
# Allow loading of arbitrary C extensions. Extensions are imported into the
# active Python interpreter and may run arbitrary code.
MASTER.unsafe-load-any-extension = false
# Disable the message, report, category or checker with the given id(s). You
# can either give multiple identifiers separated by comma (,) or put this
# option multiple times (only on the command line, not in the configuration
# file where it should appear only once).You can also use "--disable=all" to
# disable everything first and then reenable specific checks. For example, if
# you want to run only the similarities checker, you can use "--disable=all
# --enable=similarities". If you want to run only the classes checker, but have
# no Warning level messages displayed, use"--disable=all --enable=classes
# --disable=W"
MESSAGES-CONTROL.disable = [
    # Too difficult to please.
    "duplicate-code",
    # Let ruff handle long lines.
    "line-too-long",
    "locally-disabled",
    "missing-return-type-doc",
    # We don't need everything to be documented because of mypy.
    "missing-type-doc",
    # The Click CLI intentionally has many options and branches.
    "too-complex",
    "too-few-public-methods",
    "too-many-arguments",
    "too-many-branches",
    "too-many-instance-attributes",
    "too-many-lines",
    "too-many-locals",
    "too-many-public-methods",
    "too-many-return-statements",
    "too-many-statements",
    # Let ruff deal with sorting.
    "ungrouped-imports",
    # Let ruff handle unused imports.
    "unused-import",
    # Let ruff handle imports.
    "wrong-import-order",
]
# Enable the message, report, category or checker with the given id(s). You can
# either give multiple identifier separated by comma (,) or put this option
# multiple time (only on the command line, not in the configuration file where
# it should appear only once). See also the "--disable" option for examples.
MESSAGES-CONTROL.enable = [
    "bad-inline-option",
    "deprecated-pragma",
    "file-ignored",
    "spelling",
    "use-symbolic-message-instead",
    "useless-suppression",
]
# We ignore invalid names because:
# - We want to use global variables in documentation, which may not be uppercase.
MESSAGES-CONTROL.per-file-ignores = [
    "docs/source/conf.py:invalid-name",
    "src/literalizer_cli/__main__.py:missing-kwoa",
]
# Spelling dictionary name. Available dictionaries: none. To make it working
# install python-enchant package.
SPELLING.spelling-dict = "en_US"
# A path to a file that contains private dictionary; one word per line.
SPELLING.spelling-private-dict-file = "spelling_private_dict.txt"
# Tells whether to store unknown words to indicated private dictionary in
# --spelling-private-dict-file option instead of raising a message.
SPELLING.spelling-store-unknown-words = "no"

[tool.interrogate]
fail-under = 100
exclude = [
    "src/literalizer_cli/_setuptools_scm_version.py",
]
verbose = 2
omit-covered-files = true

[tool.check-manifest]
ignore = [
    ".pre-commit-config.yaml",
    ".prettierrc",
    ".vscode/**",
    "admin",
    "admin/**",
    "bin",
    "bin/**",
    "CHANGELOG.rst",
    "ci",
    "ci/**",
    "conftest.py",
    "Dockerfile",
    "docs",
    "docs/**",
    "flake.lock",
    "flake.nix",
    "LICENSE",
    "Makefile",
    "newsfragments",
    "newsfragments/**",
    "spelling_private_dict.txt",
    "src/*/_setuptools_scm_version.py",
    "tests",
    "tests/**",
    "uv.lock",
    "VERSION",
    "zizmor.yml",
]

[tool.deptry]
optional_dependencies_dev_groups = [
    "dev",
    "release",
]

[tool.vulture]
exclude = [
    ".venv",
    "src/literalizer_cli/_setuptools_scm_version.py",
]
ignore_names = [
    # Sphinx.
    "autoclass_content",
    "autodoc_member_order",
    "copybutton_exclude",
    "extensions",
    "html_show_copyright",
    "html_show_sourcelink",
    "html_show_sphinx",
    "html_theme",
    "html_theme_options",
    "html_title",
    "htmlhelp_basename",
    "intersphinx_mapping",
    "language",
    "linkcheck_retries",
    "master_doc",
    "minimum_python_version",
    "nitpicky",
    "project_copyright",
    "pygments_style",
    "release",
    "rst_prolog",
    "source_suffix",
    "spelling_word_list_filename",
    "templates_path",
    "towncrier_draft_autoversion_mode",
    "towncrier_draft_include_empty",
    "towncrier_draft_working_directory",
    "warning_is_error",
]

[tool.pyproject-fmt]
indent = 4
keep_full_version = true
max_supported_python = "3.14"

[tool.mypy]
files = [ "." ]
exclude = [ "build" ]
follow_untyped_imports = true
strict = true
plugins = [
    "mypy_strict_kwargs",
]

[tool.pyrefly]
errors.non-exhaustive-match = "error"
errors.unused-ignore = "error"
disable-project-excludes-heuristics = true
project-excludes = [
    "src/*/_setuptools_scm_version.py",
]

[tool.pyright]
typeCheckingMode = "strict"
enableTypeIgnoreComments = false
reportUnnecessaryTypeIgnoreComment = true

[tool.ty]
# Error if ty emits any warning-level diagnostics.
terminal.error-on-warning = true
# Disable support for `type: ignore` comments
analysis.respect-type-ignore-comments = false

[tool.pytest]
ini_options.addopts = [
    "-n",
    "auto",
]
ini_options.xfail_strict = true
ini_options.log_cli = true

[tool.coverage]
run.branch = true
run.omit = [
    "src/*/_setuptools_scm_version.py",
    "src/literalizer_cli/__main__.py",
]
report.exclude_also = [
    "@overload",
    "class .*\\bProtocol\\):",
    "if TYPE_CHECKING:",
]
report.show_missing = true

[tool.towncrier]
# The changelog and the per-release GitHub release notes are both built
# from news fragments under ``newsfragments/``.  The release workflow
# runs ``towncrier build`` to assemble them; contributors add one
# fragment file per user-facing change.
directory = "newsfragments"
filename = "CHANGELOG.rst"
# Custom template so an assembled version reproduces the historical
# style exactly: a bare ``<version>`` heading (no project name, no
# date) followed by a flat bullet list with no per-type sub-headings.
template = "docs/towncrier_template.rst.jinja"
title_format = "{version}"
issue_format = "#{issue}"
# ``title_format`` underline first, then any nested headings.  A bare
# version such as ``2026.05.18`` underlined with ``-`` matches every
# pre-towncrier entry in CHANGELOG.rst.
underlines = [ "-", "~", "^" ]
type = [
    # A single, unnamed fragment type keeps the assembled output as one
    # flat bullet list, matching the historical changelog (which never
    # grouped entries under "Features"/"Bugfixes"/... sub-headings).
    { directory = "change", name = "", showcontent = true },
]

[tool.doc8]
max_line_length = 2000
ignore_path = [
    "./.venv",
    "./.eggs",
    "./docs/build",
    "./docs/build/spelling/output.txt",
    "./node_modules",
    "./src/*.egg-info/",
    "./src/*/_setuptools_scm_version.py",
]

[tool.pydocstringformatter]
write = true
split-summary-body = false
max-line-length = 75
linewrap-full-docstring = true

[tool.yamlfix]
section_whitelines = 1
whitelines = 1
